--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.540.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-compare-image": "^3.5.7",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
