--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cesium": "^1.132.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
-    "react-compare-image": "^3.5.7",
+    "react-compare-image": "3.5.2",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
